5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1811_2571.log
== TEST (2019-06-13 15:13:17) 
-- CODE:
s = str(input("digite uma palavra com a letra a: "))
for ch in s:
	if ch == "a" and ch == "A":
		a = a - ch
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:13:29) 
-- CODE:
s = str(input("digite uma palavra com a letra a: "))
a = 0
for ch in s:
	if ch == "a" and ch == "A":
		a = a - ch
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:13:34) 
-- CODE:
s = str(input("digite uma palavra com a letra a: "))
a = 0
for ch in s:
	if ch == "a" and ch == "A":
		a = a - ch
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:13:59) 
-- CODE:
s = str(input("digite uma palavra com a letra a: "))
a = 0
for ch in s:
	if ch != "a" and ch != "A":
		a = a + ch
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = a + ch
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:14:08) 
-- CODE:
s = input("digite uma palavra com a letra a: ")
a = 0
for ch in s:
	if ch != "a" and ch != "A":
		a = a + ch
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = a + ch
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:14:32) 
-- CODE:
s = input("digite uma palavra com a letra a: ")
a = ""
for ch in s:
	if ch != "a" and ch != "A":
		a = a + ch
print(a)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 15:14:37) 
-- CODE:
s = input("digite uma palavra com a letra a: ")
a = ""
for ch in s:
	if ch != "a" and ch != "A":
		a = a + ch
print(a)
-- EXECUTION TIME:
0.659835
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
